--- a/package.json
+++ b/package.json
@@ -1,16 +1,8 @@
 {
 	"name": "opensail",
 	"version": "0.0.1",
-	"type": "module",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
-	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
+		"@megakuul/adapter-battleshiper": "^0.5.8",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"autoprefixer": "^10.4.20",
@@ -19,5 +11,13 @@
 		"tailwindcss": "^3.4.9",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
-	}
+	},
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
+	},
+	"type": "module"
 }
