--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_OPENSAIL_DATA_ENDPOINT = "https://github.com/megakuul/opensail/releases/latest/download/latest"
+VITE_OPENSAIL_DATA_ENDPOINT = "http://127.0.0.1:8000"
+# VITE_OPENSAIL_DATA_ENDPOINT = "https://github.com/megakuul/opensail/releases/latest/download/latest"
