--- a/register/ships/sui_example/ship.toml
+++ b/register/ships/sui_example/ship.toml
@@ -9,14 +9,10 @@ team = "example"
 source = "orc"
 # Boat identifier when pulled from 'orc' source. This reflects the orc database 'SailNo'. 
 orc_sailing_no = "GRE-016"
-# Specifies the 'orc' certificate family [ORC = standard certs; DH = double handed certs; NS = non spinnaker certs]
-orc_certificate_family = "DH"
 
 # Spec defines boat dimensions and measurements. This information is used to derive the rating. 
 [spec]
 # Boat specification data source [manual = configured in ./spec.toml; orc = pulled from orc database with specified 'orc_sailing_no']
-source = "manual"
+source = "orc"
 # Boat identifier when pulled from 'orc' source. This reflects the orc database 'SailNo'. 
-orc_sailing_no = ""
-# Specifies the 'orc' certificate family [ORC = standard certs; DH = double handed certs; NS = non spinnaker certs]
-orc_certificate_family = "DH"
+orc_sailing_no = "GRE-016"
