--- a/.github/workflows/push-register.yaml
+++ b/.github/workflows/push-register.yaml
@@ -27,9 +27,14 @@ jobs:
       
       - name: generate application release
         run: |
-          engine generate --input-path "." --output-path "./out"
+          engine generate --input-path "." --output-path "/tmp/opensail/data"
+
+      - name: generate version file
+        run: |
+          jq '. += ["${{ steps.tag_version.outputs.new_tag }}"]' ./src/static/api/versions.json > /tmp/opensail/versions.json
 
       - name: bump version and push tag
+        id: tag_version
         uses: anothrNick/github-tag-action@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -39,10 +44,16 @@ jobs:
       - name: push versioned release
         uses: softprops/action-gh-release@v2
         with:
-          files: out/*
+          files: /tmp/out/*
 
-      - name: push latest release
-        uses: softprops/action-gh-release@v2
-        with:
-          name: "latest"
-          files: out/*
+      - name: commit api data
+        run: |
+          mkdir -p ./src/static/api/${{ steps.tag_version.outputs.new_tag }}
+          mv /tmp/opensail/data/* ./src/static/api/${{ steps.tag_version.outputs.new_tag }}
+          mv /tmp/opensail/versions.json ./src/static/api/versions.json
+
+          git config --global user.name "Github Actions"
+          git config --global user.email "actions@github.com"
+          git add .
+          git commit -m "chore(ci): commit static api data ${{ steps.tag_version.outputs.new_tag }}"
+          git push
