--- a/register/ships/sui_example/spec.toml
+++ b/register/ships/sui_example/spec.toml
@@ -1,31 +1,31 @@
 [dimension]
 # LOA specifies the length in meters from the foremost to the rearmost point of the ship.
-length_over_all = ""
+length_over_all = 8
 # Draft specifies the vertical distance from the bottom of the keel to the waterline in meters.
-draft = ""
+draft = 2.5
 # Beam specifies the largest width of the beam in meters.
-beam = ""
+beam = 3
 # Forestay height (IMSL) specifies the vertical height of the forestay in meters.
-forestay_height = ""
+forestay_height = 7
 # Wetted surface area (WSS) specifies the surface area touching the water in square meters.
-wetted_surface_area = ""
+wetted_surface_area = 16
 
 [sail_area]
 # Specifies the area of the main sail in square meters.
-main = ""
+main = 30
 # Specifies the area of the largest onboard jib sail in square meters.
-jib = ""
+jib = 25
 # Specifies the area of the largest onboard downwind sail (e.g. gennaker or code zero) in square meters.
-asymmetric_spinnaker = ""
+asymmetric_spinnaker = 0
 # Specifies the area of the largest onboard downwind sail (e.g. spinnaker) in square meters.
-symmetric_spinnaker = ""
+symmetric_spinnaker = 50
 
 [misc]
 # Specifies the stability index of the ship (can be obtained by the manufacturer).
-stability_index = ""
+stability_index = 100
 # Specifies the displacement while sailing in kg.
-sailing_displacement = ""
+sailing_displacement = 1500
 # Specifies the measured displacement in kg.
-measured_displacement = ""
+measured_displacement = 1000
 # Specifies the maximum crew weight in kg.
-max_crew_weight = ""
+max_crew_weight = 400
