feat: improved various minor ui components + start implementing openfactor

--- a/register/ships/sui_example/ship.toml
+++ b/register/ships/sui_example/ship.toml
@@ -3,19 +3,19 @@ team = "example"
 
 # Info defines general information about the boat. This information does not influence rating.
 [info]
-# Boat information data source [manual = configured in ./info.toml; orc = pulled from orc database with specified 'orc_sailing_no']
+# Boat information data source [manual = configured in ./info.toml; orc = pulled from orc database with specified 'orc_ref_no']
 source = "manual"
 # Boat certificate identifier when pulled from 'orc' source. This reflects the orc database 'RefNo' / 'Reference Number'. 
 orc_ref_no = ""
 
-# General Spec defines generalized boat dimensions and measurements. This information is used to derive the rating. 
-[general_spec]
-# Boat specification data source [manual = configured in ./spec.toml; orc = pulled from orc database with specified 'orc_sailing_no']
+# Base Spec defines basic boat dimensions and measurements. This information is used to derive the initial base rating. 
+[base_spec]
+# Boat specification data source [manual = configured in ./base_spec.toml; orc = pulled from orc database with specified 'orc_ref_no']
 source = "manual"
 # Boat certificate identifier when pulled from 'orc' source. This reflects the orc database 'RefNo' / 'Reference Number'. 
 orc_ref_no = ""
 
-# Custom Spec defines customized boat 
-[custom_spec]
-# Boat specification data source [manual = configured in ./spec.toml]
+# Custom Spec defines more specific boat characteristics. This information is optional and improves the base rating.
+[extra_spec]
+# Boat specification data source [manual = configured in ./extra_spec.toml]
 source = "manual"
