--- a/register/ships/sui_example/extra_spec.toml
+++ b/register/ships/sui_example/extra_spec.toml
@@ -7,9 +7,11 @@ stabilization = ""
 # Hull specifies the hull type [mono; multi;]
 hull = ""
 
-# Composition specifies how the ships weight is composed.
+# Composition specifies how the ships weight is composed. 
+# Weight not listed here is counted as "default" material, which means material that gets no additional bonus (e.g. sails).
 [composition]
-keel_percentage = 10 # specifies the weight percentage of the keel
-cfk_percentage = 30 # specifies the weight percentage of carbon fibre reinforced polymer
-gfk_percentage = 40 # specifies the weight percentage of fibreglass reinforced plastic
-wood_percentage = 20 # specifies the weight percentage of wood
+keel_percentage = 20 # specifies the weight percentage of the keel
+cfk_percentage = 5 # specifies the weight percentage of carbon fibre reinforced polymer
+alu_percentage = 5 # specifies the weight percentage of aluminium
+gfk_percentage = 68 # specifies the weight percentage of fibreglass reinforced plastic
+wood_percentage = 0 # specifies the weight percentage of wood
