--- a/register/ships/sui_jay_jay/ship.toml
+++ b/register/ships/sui_jay_jay/ship.toml
@@ -6,14 +6,14 @@ team = ""
 # Boat information data source [manual = configured in ./info.toml; orc = pulled from orc database with specified 'orc_sailing_no']
 source = "orc"
 # Boat certificate identifier when pulled from 'orc' source. This reflects the orc database 'RefNo' / 'Reference Number'. 
-orc_ref_no = "030800034LU"
+orc_ref_no = "030800036AI"
 
 # Base Spec defines basic boat dimensions and measurements. This information is used to derive the initial base rating. 
 [base_spec]
 # Boat specification data source [manual = configured in ./base_spec.toml; orc = pulled from orc database with specified 'orc_ref_no']
 source = "orc"
 # Boat certificate identifier when pulled from 'orc' source. This reflects the orc database 'RefNo' / 'Reference Number'. 
-orc_ref_no = "030800034LU"
+orc_ref_no = "030800036AI"
 
 # Custom Spec defines more specific boat characteristics. This information is optional and improves the base rating.
 [extra_spec]
