--- a/register/ships/sui_jay_jay/extra_spec.toml
+++ b/register/ships/sui_jay_jay/extra_spec.toml
@@ -2,13 +2,14 @@
 [design]
 # Mode specifies the type of the hull design/mode [displace; semi; planing; hydrofoil;]
 mode = "semi"
-# Stabilization specifies the method used to stabilize the ship [foils; centreboard; daggerboard; keel;]
-stabilization = "keel"
+# Stabilization specifies the method used to stabilize the ship [foils; centreboard; daggerboard; finkeel; bulbkeel; fullkeel;]
+stabilization = "finkeel"
 # Hull specifies the hull type [mono; multi;]
 hull = "mono"
 
 # Composition specifies how the ships weight is composed.
 [composition]
-keel_percentage = 36
+ballast_percentage = 36
 cfk_percentage = 3
 gfk_percentage = 60
+engine_percentage = 1
