--- a/register/ships/sui_fujin/extra_spec.toml
+++ b/register/ships/sui_fujin/extra_spec.toml
@@ -1,16 +1,17 @@
 # Design holds information about the ships design characteristics
 [design]
 # Mode specifies the type of the hull design/mode [displace; semi; planing; hydrofoil;]
-mode = "semi"
+mode = "displace"
 # Stabilization specifies the method used to stabilize the ship [foils; centreboard; daggerboard; finkeel; bulbkeel; fullkeel;]
-stabilization = "bulbkeel"
+stabilization = "finkeel"
 # Hull specifies the hull type [mono; multi;]
 hull = "mono"
 
 # Composition specifies how the ships weight is composed.
 [composition]
-ballast_percentage = 65
-cfk_percentage = 1
+ballast_percentage = 35
 alu_percentage = 3
-gfk_percentage = 30
-engine_percentage = 1
+gfk_percentage = 40
+wood_percentage = 2
+engine_percentage = 3
+amenity_percentage = 15
