ci: fix permission in github action

--- a/.github/workflows/pr-application.yaml
+++ b/.github/workflows/pr-application.yaml
@@ -8,6 +8,9 @@ jobs:
   validate-and-tag:
     runs-on: ubuntu-latest
     permissions:
+      contents: read
+      pull-requests: write
+    permissions:
       pull-request: write
     steps:
       - name: label pull request
