--- a/.github/workflows/pr-register.yaml
+++ b/.github/workflows/pr-register.yaml
@@ -7,6 +7,9 @@ on:
 jobs:
   validate-and-tag:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
