--- a/.github/workflows/pr-application.yaml
+++ b/.github/workflows/pr-application.yaml
@@ -10,6 +10,7 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
+      issues: write
     permissions:
       pull-request: write
     steps:
