--- a/.github/workflows/push-register.yaml
+++ b/.github/workflows/push-register.yaml
@@ -48,7 +48,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.tag_version.outputs.new_tag }}
-          files: /tmp/out/*
+          files: /tmp/opensail/data/*
 
       - name: commit api data
         run: |
