--- a/register/ships/sui_example_gc32/extra_spec.toml
+++ b/register/ships/sui_example_gc32/extra_spec.toml
@@ -2,7 +2,7 @@
 [design]
 # Mode specifies the type of the hull design/mode [displace; semi; planing; hydrofoil;]
 mode = "hydrofoil"
-# Stabilization specifies the method used to stabilize the ship [foils; centreboard; daggerboard; keel;]
+# Stabilization specifies the method used to stabilize the ship [foils; centreboard; daggerboard; finkeel; bulbkeel; fullkeel;]
 stabilization = "foils"
 # Hull specifies the hull type [mono; multi;]
 hull = "multi"
